k8s/app/eureka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
  namespace: racunovodstvo-dev
  labels:
    app: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - image: ghcr.io/raf-si-2021/racunovodstvo-eureka:latest
          name: racunovodstvo-eureka
          imagePullPolicy: Always
          resources: 
            limits:
              cpu: "1"
              memory: 1Gi
          ports:
            - name: eureka
              containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
  namespace: racunovodstvo-dev
  labels:
    app: eureka
spec:
  selector:
    app: eureka
  ports:
    - port: 8761
      protocol: TCP
      targetPort: eureka
