k8s/app/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: racunovodstvo-dev
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - image: ghcr.io/raf-si-2021/racunovodstvo-gateway:latest
          name: racunovodstvo-gateway
          imagePullPolicy: Always
          resources: 
            limits:
              cpu: "1"
              memory: 1Gi
          ports:
            - name: gateway
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: racunovodstvo-dev
  labels:
    app: gateway
spec:
  selector:
    app: gateway
  ports:
    - port: 8080
      protocol: TCP
      targetPort: gateway
