k8s/app/preduzece-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preduzece-service
  namespace: racunovodstvo-dev
  labels:
    app: preduzece-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: preduzece-service
  template:
    metadata:
      labels:
        app: preduzece-service
    spec:
      containers:
        - image: ghcr.io/raf-si-2021/racunovodstvo-preduzece:latest
          name: racunovodstvo-preduzece-service
          imagePullPolicy: Always
          resources: 
            limits:
              cpu: "1"
              memory: 1Gi
          ports:
            - name: preduzece-service
              containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: preduzece-service
  namespace: racunovodstvo-dev
  labels:
    app: preduzece-service
spec:
  selector:
    app: preduzece-service
  ports:
    - port: 8083
      protocol: TCP
      targetPort: preduzece-service
