k8s/app/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: racunovodstvo-dev
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      serviceAccount: discovery-client
      containers:
        - image: ghcr.io/raf-si-2021/racunovodstvo-user:latest
          name: racunovodstvo-user-service
          imagePullPolicy: Always
          ports:
            - name: user
              containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: racunovodstvo-dev
  labels:
    app: user
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - port: 8082
      protocol: TCP
      targetPort: user
